src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Master Lead Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Bad Data</fullName>
        </values>
        <values>
            <fullName>For AD to Decide</fullName>
        </values>
        <values>
            <fullName>Nurture</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Partner Lead Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Accepted</fullName>
        </values>
        <values>
            <fullName>Dead%2FDry</fullName>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
        <values>
            <fullName>Suspect</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Name_Local_Lang__c</fullName>
        <label>Account Name (Local Lang)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address_1_Local_Lang__c</fullName>
        <label>Address 1 (Local Lang)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address_2_Local_Lang__c</fullName>
        <label>Address 2 (Local Lang)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Anaylst_Reports__c</fullName>
        <label>Anaylst Reports</label>
        <picklist>
            <picklistValues>
                <fullName>Insurance Software Deal Trends</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Celent Report</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Behavior_Score__c</fullName>
        <label>Behavior Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BillingCenter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BillingCenter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brochures__c</fullName>
        <label>Brochures</label>
        <picklist>
            <picklistValues>
                <fullName>Guidewire PolicyCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guidewire ClaimCenter</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>City_Local_Lang__c</fullName>
        <label>City (Local Lang)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ClaimCenter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ClaimCenter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Connections_Announcements__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Connections Announcements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Form_Comment__c</fullName>
        <description>This is a field that records comments submitted on our Marketo &quot;Contact Us&quot; form.</description>
        <label>Contact-Form-Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Country_Local_Lang__c</fullName>
        <label>Country (Local Lang)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Success_Stories__c</fullName>
        <label>Customer Success Stories</label>
        <picklist>
            <picklistValues>
                <fullName>Canal Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICAT/Boulder Claims</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Main Street America</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>DB_Created_Date_without_Time__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package.  If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Created Date without Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DB_Lead_Age__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>NOW() - LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Lead Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DWP__c</fullName>
        <label>DWP</label>
        <picklist>
            <picklistValues>
                <fullName>&lt;$100M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$100-300M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$300-1B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$1-5B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;$5B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Datasheet__c</fullName>
        <label>Datasheet</label>
        <picklist>
            <picklistValues>
                <fullName>CC Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CC for P&amp;C Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CC for Workers&apos; Compensation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CC for Third Party Adminstrators</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CC for Self-Insureds</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Demographic_Score__c</fullName>
        <label>Demographic Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description_Local_Lang__c</fullName>
        <label>Description (Local Lang)</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Digital__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Digital</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Direct_Mail_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Direct Mail Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do not contact this person via email or direct mail.  Full Opt-Out.</inlineHelpText>
        <label>Do Not Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eloqua_Form_Phone_Ext__c</fullName>
        <label>Eloqua Form Phone Ext</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Eloqua_Form_Phone__c</fullName>
        <description>Field used by Eloqua to populate for phone number if contact fills out form on website.</description>
        <label>Eloqua Form Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Eloqua_Form_Title__c</fullName>
        <description>Field used by Eloqua to populate the title of a contact if they fill out a form.</description>
        <label>Eloqua Form Title</label>
        <length>48</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eloqua_Lead_Rating_HAT_Date__c</fullName>
        <label>Eloqua Lead Rating – HAT-Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eloqua_Lead_Rating_HAT__c</fullName>
        <label>Eloqua Lead Rating - HAT</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Eloqua_Lead_Rating_Last__c</fullName>
        <label>Eloqua Lead Rating - Last</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Eloqua_Lead_Score_Last_Date__c</fullName>
        <label>Eloqua Lead Score - Last-Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eloqua_Lead_Score_Last__c</fullName>
        <label>Eloqua Lead Score - Last</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Subscriptions__c</fullName>
        <description>Custom field for storing Marketo Subscriptions</description>
        <label>Email Subscriptions</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Invitations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Event Invitations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_parties_we_use__c</fullName>
        <label>External parties we use</label>
        <picklist>
            <picklistValues>
                <fullName>Independent agents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent adjusters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Damage/repair network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glass claims admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical bill review</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Follow_up_date__c</fullName>
        <description>Date for follow up</description>
        <label>Follow up date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Geos_supported__c</fullName>
        <inlineHelpText>Which Geo’s partner has offices &amp; sales support</inlineHelpText>
        <label>Geo&apos;s Supported</label>
        <picklist>
            <picklistValues>
                <fullName>Australia New Zealand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benelux</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Croatia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Czech Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denmark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hungary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Israel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Norway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slovakia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sweden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Switzerland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turkey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United States</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Guidewire_Employee_Referral__c</fullName>
        <inlineHelpText>Tell us who you work closely with at Guidewire</inlineHelpText>
        <label>Guidewire Employee Referral</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Guidewire_Live__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Guidewire Live</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Guidewire_Webinars_and_Events__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Guidewire Webinars and Events</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>How_did_you_hear_about_Guidewire__c</fullName>
        <label>How did you hear about Guidewire?</label>
        <picklist>
            <picklistValues>
                <fullName>Industry Publication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertisement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tradeshow/Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Website</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Industry_Trends__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Industry Trends</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interested_in__c</fullName>
        <label>Interested in</label>
        <picklist>
            <picklistValues>
                <fullName>Automated claims assign.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dividing claims amoung handlers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flagging claims</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capturing granular claims info</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Joint_Customer_Names__c</fullName>
        <label>Joint Customer Names</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Joint_Customers__c</fullName>
        <inlineHelpText>How many total joint customers do we have</inlineHelpText>
        <label>Joint Customers</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Joint_Implementations__c</fullName>
        <label>Joint Implementations</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Joint_Integrations__c</fullName>
        <inlineHelpText>How many customers have you integrated your solution with Guidewire</inlineHelpText>
        <label>Joint Integrations</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Updated__c</fullName>
        <description>When was the subscription preferences and contact information last updated?</description>
        <inlineHelpText>When was the subscription preferences and contact information last updated?</inlineHelpText>
        <label>Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Most_Recent__c</fullName>
        <label>Lead Source Most Recent</label>
        <picklist>
            <picklistValues>
                <fullName>Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising-0610 White Paper on INN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising-0905 White Paper on INN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising-0906 Banner Ads CC UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising-Google</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising-INN Policy SW Lead Locator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising-KnowledgeStorm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analyst/Press</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colleague</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conference-09 March-Argus/Guidewire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conference-09 Nov-Argus Claims Mngmt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Contact/Cold Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event-PC-Roadshow-May-2011-Columbus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event-PC-Roadshow-May-2011-NYC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event-PC-Roadshow-May-2011-Toronto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event - UK_StrategicClaimsConference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guidewire Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guidewire Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GW Event-0210 FR Breakfast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GW Event-0610 UK Breakfast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GW Event-0612 RTG Breakfast Series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GW Event-0706 BC Toronto Seminar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GW Event-0710 Connections 07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GW Event-0803 DACH Roadshow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GW Event-1110 FR Breakfast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GW Event- Feb2011 FR Breakfast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GW Event-Forum</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lines_of_Business__c</fullName>
        <label>Lines of Business</label>
        <picklist>
            <picklistValues>
                <fullName>Personal Iines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial specialty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workers comp</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <label>Market Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Agency/Broker customer portals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing electronic payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Intelligence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Claims Repair, Replacement &amp; Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content Document management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Experience Management/CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Document production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estimating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fraud detection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office automation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Predictive analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulatory Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risk assessment/risk management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales and Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security encryption</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wireless/mobile technologies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workflow</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Marketing_Announcements__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Announcements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketo_Form_Phone__c</fullName>
        <label>Marketo Form Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>MoreInformation__c</fullName>
        <label>Type of request</label>
        <picklist>
            <picklistValues>
                <fullName>General Information</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Guidewire BillingCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guidewire ClaimCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guidewire PolicyCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Claims Starter Kit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alliance program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guidewire Web Seminar Archive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Why Guidewire Campaign Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replace For Success Campaign Form</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>My_company_prefers__c</fullName>
        <label>My company prefers</label>
        <picklist>
            <picklistValues>
                <fullName>Internal systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Packaged software</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Newsletter_Subscription__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marketing Quarterly Newsletter</description>
        <label>Newsletter Subscription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_longer_with_firm__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No longer with firm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_Practice_Size_Scale__c</fullName>
        <label>P&amp;C Practice Size &amp; Scale</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PRM_Add_On_Modules__c</fullName>
        <label>Add On Modules</label>
        <picklist>
            <picklistValues>
                <fullName>CDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISO Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>London Markets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mitchell- Auto Casualty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mitchell- Auto Physical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Mgmt for Policyholder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Claim Portal for Policyholder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote and Buy for Policyholder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Claim Portal for Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reinsurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard Reporting</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>PRM_Contact_Permissions__c</fullName>
        <label>Contact Permissions</label>
        <picklist>
            <picklistValues>
                <fullName>Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct - with Partner Permission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Through Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PRM_Existing_Customer__c</fullName>
        <description>Created a new Lead Picklist to specify if a lead was initially influenced by GW</description>
        <label>Existing Customer</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PRM_GW_Account_Exec_Email__c</fullName>
        <formula>PRM_Guidewire_Account_Exec__r.Email</formula>
        <label>GW Account Exec Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRM_Guidewire_Account_Exec__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Guidewire Account Exec</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PRM_Guidewire_Role__c</fullName>
        <description>Guidewire&apos;s role within a partner referral.</description>
        <label>Guidewire Role</label>
        <picklist>
            <picklistValues>
                <fullName>Request Assistance (Selling GW Products)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provide Assistance (Selling Mitchell Products)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PRM_Integration_Removed__c</fullName>
        <label>Integration Removed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PRM_Mitchell_Contribution_Factor__c</fullName>
        <formula>IF( 
ISPICKVAL(PRM_Integration_Removed__c, &quot;Yes&quot;), 
0,

IF( 
ISPICKVAL(PRM_Existing_Customer__c, &quot;Yes&quot;) 
&amp;&amp; NOT(ISPICKVAL(PRM_Renewal__c, &quot;Yes&quot;)), 
0.5,

IF( 
ISPICKVAL(PRM_Renewal__c, &quot;Yes&quot;)
&amp;&amp; (ISPICKVAL(PRM_RPA_Range__c, &quot;&gt;=1&quot;)),  
(PRM_Prior_Partner_Contribution_Factor__c *1), 


IF( 
ISPICKVAL(PRM_Renewal__c, &quot;Yes&quot;)
&amp;&amp; (ISPICKVAL(PRM_RPA_Range__c, &quot;&lt; 1&quot;)),  
(PRM_Prior_Partner_Contribution_Factor__c * PRM_RPA_Value__c),


1))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mitchell Contribution Factor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PRM_Net_New_Lead__c</fullName>
        <description>Created a new Lead Picklist to specify if a lead is a new customer</description>
        <label>Net New Lead</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PRM_New_Primary_Product__c</fullName>
        <label>New Primary Product</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PRM_Partner_Account_Exec__c</fullName>
        <label>Partner Account Exec</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRM_Partner_Account_Exec_s_Email__c</fullName>
        <label>Partner Account Exec ‘s Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PRM_Partner_Product__c</fullName>
        <label>Partner Product</label>
        <type>TextArea</type>
    </fields>
</CustomObject>